--- a/{{cookiecutter.beat}}/module/{{cookiecutter.module}}/{{cookiecutter.metricset}}/_beat/docs.asciidoc
+++ b/{{cookiecutter.beat}}/module/{{cookiecutter.module}}/{{cookiecutter.metricset}}/_beat/docs.asciidoc
@@ -1,3 +1,3 @@
-=== {{cookiecutter.metricset_name}} MetricSet
+=== {{cookiecutter.metricset}} MetricSet
 
 Increments a counter and sends it to elasticsearch.
